# data-transfer-from-amazon-s3-glacier-vaults-to-amazon-s3

./: .gitignore  CHANGELOG.md  NOTICE  README.md  cdk.json  pyproject.toml  solution-manifest.yaml  sonar-project.properties  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: DEVELOPER_GUIDE.md
source/solution/: app.py
source/solution/application/: __init__.py  handlers.py
source/solution/application/archive_naming/: override.py
source/solution/application/archive_retrieval/: initiator.py  notification_processor.py  timeout.py
source/solution/application/chunking/: chunk_generator.py
source/solution/application/chunking/ranges_overlap/: chunk_generator.py
source/solution/application/completion/: checker.py
source/solution/application/db_accessor/: dynamoDb_accessor.py
source/solution/application/download_window/: extension.py
source/solution/application/facilitator/: processor.py
source/solution/application/glacier_s3_transfer/: download.py  facilitator.py  multipart_cleanup.py  upload.py  validator.py
source/solution/application/glacier_service/: glacier_apis_factory.py  glacier_typing.py
source/solution/application/hashing/: tree_hash.py
source/solution/application/metrics/: status_controller.py
source/solution/application/mocking/: handlers.py  mock_glacier_apis.py  mock_glacier_generator.py  mock_glacier_vault.py  notify_sns.py
source/solution/application/model/: base.py  events.py  facilitator.py  glacier_transfer_meta_model.py  glacier_transfer_model.py  glacier_transfer_part_model.py  metric_record.py  partition_metric_record.py  responses.py  workflow_metadata_model.py
source/solution/application/operational_metrics/: anonymized_stats.py
source/solution/application/partial_run/: archives_status_cleanup.py
source/solution/application/post_workflow/: dashboard_update.py
source/solution/application/util/: exceptions.py  retry.py
source/solution/infrastructure/: output_keys.py  stack.py
source/solution/infrastructure/aspects/: app_registry.py
source/solution/infrastructure/glue_helper/: glue_sfn_update.py
source/solution/infrastructure/glue_helper/scripts/: archive_naming.py  metric_collection_script.py  partitioning.py
source/solution/infrastructure/helpers/: cloudwatch_dashboard.py  distributed_map.py  logs_insights_query.py  nested_distributed_map.py  solutions_function.py  solutions_state_machine.py  solutions_table.py  system_manager.py  task_catch.py  task_retry.py
source/solution/infrastructure/ssm_automation_docs/: orchestration_automation_document.py  ssm_document_template.py
source/solution/infrastructure/ssm_automation_docs/scripts/: orchestration_doc_script.py
source/solution/infrastructure/workflows/: archives_status_cleanup.py  cleanup.py  cloudwatch_dashboard_update.py  extend_download_window.py  get_inventory.py  initiate_retrieval.py  orchestrator.py  retrieve_archive.py  stack_info.py
source/solution/mocking/: mock_glacier_stack.py
source/solution/pipeline/: README.md  stack.py
source/tests/: mock_glacier_data.py
source/tests/integration/infrastructure/: conftest.py  test_archive_chunk_determination_lambda.py  test_archives_status_cleanup.py  test_async_facilitator.py  test_buckets.py  test_chunk_retrieval_lambda.py  test_cleanup_step_function.py  test_cloudwatch_dashboard_update_step_function.py  test_counter_query_definitions.py  test_extend_download_window_step_function.py  test_glacier_object_retrieval_dynamodb.py  test_initiate_retrieval_step_function.py  test_inventory_chunk_determination_lambda.py  test_inventory_retrieval_step_function.py  test_orchestrator_step_function.py  test_retrieve_archive_workflow.py  test_system_manager.py
source/tests/integration/infrastructure/util/: ddb_util.py  s3_util.py  sfn_util.py  (+1 more)
source/tests/unit/: conftest.py
source/tests/unit/application/: test_handlers.py
source/tests/unit/infrastructure/: test_stack.py
source/tests/unit/mocking/: test_mock_glacier_stack.py
source/tests/unit/pipeline/: test_pipeline.py
(+36 files in other folders)
