# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "source"}

[project]
name = "solution"
version = "1.1.0"
description = "Data transfer from Amazon S3 Glacier vaults to Amazon S3"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache Software License"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AWS CDK :: 2",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "boto3",
    "aws-cdk-lib==2.91.0",
    "aws-cdk.aws-glue-alpha",
    "aws-cdk.aws-servicecatalogappregistry-alpha",
    "constructs>=10.0.0,<11.0.0",
    "cdk-nag",
]

[project.scripts]
cdk-app = "solution.app:main"
mock-glacier = "solution.application.mocking.mock_glacier_generator:write_mock_glacier_data"

[project.optional-dependencies]
dev = [
    "tox",
    "black==23.12.1",
    "pytest==7.4.3",
    "pytest-cov",
    "cdk-nag",
    "mypy==1.7.1",
    "moto==4.1.10",
    "aws-lambda-powertools[aws-sdk]",
    "boto3-stubs-lite[essential]",
    "boto3-stubs-lite[cloudformation]",
    "boto3-stubs-lite[dynamodb]",
    "boto3-stubs-lite[sqs]",
    "boto3-stubs-lite[sns]",
    "boto3-stubs-lite[s3]",
    "boto3-stubs-lite[iam]",
    "boto3-stubs-lite[stepfunctions]",
    "boto3-stubs-lite[glacier]",
    "boto3-stubs-lite[events]",
    "pyspark",
    "boto3-stubs-lite[ssm]",
    "boto3-stubs[logs]",
    "types-pyyaml"
]

[tool.isort]
profile = "black"
known_first_party = "solution"

[tool.bandit]
exclude_dirs = ["tests"]
